done with search artist. trying do finish top tracks

--- a/app/src/main/res/layout/activity_top_tracks.xml
+++ b/app/src/main/res/layout/activity_top_tracks.xml
@@ -3,14 +3,14 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="com.udacity.qinfeng.sportifystreamer.toptracks.TopTracksActivity">
+
 
     <fragment
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:name="com.udacity.qinfeng.sportifystreamer.SearchArtistFragment"
-        android:id="@+id/searchArtistsFragment"
-        >
-
-    </fragment>
+        android:name="com.udacity.qinfeng.sportifystreamer.toptracks.TopTracksFragment"
+        android:id="@+id/topTracksFragment"
+/>
 </RelativeLayout>
