--- a/app/src/main/res/layout/fragment_top_tracks.xml
+++ b/app/src/main/res/layout/fragment_top_tracks.xml
@@ -3,13 +3,18 @@
     android:layout_height="match_parent"
     tools:context="com.udacity.qinfeng.sportifystreamer.toptracks.TopTracksFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+
     <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text=""
-        android:id="@+id/textView"/>
+        android:text="@string/no_track_found_msg"
+        android:id="@+id/emptyMsg"/>
 
     <include layout="@layout/searching"
-        android:id="@+id/loadingPanel"/>
+        android:id="@+id/loadingIcon"/>
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/topTrackslistView"/>
 
 
 </FrameLayout>
