--- a/app/src/main/res/layout/fragment_search_artist.xml
+++ b/app/src/main/res/layout/fragment_search_artist.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/searchArtistET"
+        android:hint="@string/enter_artist_name"
 
         />
     <include layout="@layout/searching"
