--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,14 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+        <item name="actionBarStyle">@style/MyTheme.ActionBarStyle</item>
     </style>
 
+    <style name="MyTheme.ActionBarStyle" parent="Widget.AppCompat.ActionBar.Solid">
+        <item name="subtitleTextStyle">@style/MyTheme.ActionBarStyle.SubTitleTextStyle</item>
+    </style>
+
+    <style name="MyTheme.ActionBarStyle.SubTitleTextStyle" parent="TextAppearance.AppCompat.Widget.ActionBar.Subtitle">
+        <item name="android:textColor">@color/gray</item>
+    </style>
 </resources>
