correction after code review

--- a/app/src/main/res/layout/artist_item.xml
+++ b/app/src/main/res/layout/artist_item.xml
@@ -11,7 +11,7 @@
         android:layout_height="@dimen/list_image_height"
         android:id="@+id/artistImageIV"
         android:layout_gravity="left|center_vertical"
-        android:src="@drawable/spotifyicon"
+        android:src="@drawable/ic_spotifyicon"
         />
 
     <TextView
