--- a/app/src/main/res/layout/fragment_track_play.xml
+++ b/app/src/main/res/layout/fragment_track_play.xml
@@ -39,7 +39,30 @@
     <SeekBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/seekBar" />
+        android:id="@+id/musicControlBar"
+        android:progress="1"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0:00"
+            android:layout_marginLeft="16dp"
+            android:id="@+id/musicCurrentTime"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0:00"
+            android:id="@+id/musicEndTime"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="16dp"/>
+
+
+
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
