basical functionalities accomplished

--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="@dimen/standard_margin">
 
 
     <fragment
@@ -9,12 +10,16 @@
         android:layout_height="match_parent"
         android:name="com.udacity.qinfeng.sportifystreamer.SearchArtistFragment"
         android:id="@+id/artistSearchFragment"
-        android:layout_weight="1"/>
-
+        android:layout_weight="1"
+        />
+    <View
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="@android:color/darker_gray"/>
     <FrameLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:id="@+id/topTracksFrame"
-        android:layout_weight="1">
+        android:layout_weight="2">
     </FrameLayout>
 </LinearLayout>
