--- a/app/src/main/res/layout/activity_track_play.xml
+++ b/app/src/main/res/layout/activity_track_play.xml
@@ -1,16 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
     tools:context="com.udacity.qinfeng.sportifystreamer.trackplay.TrackPlayActivity">
-
-
-    <fragment
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:name="com.udacity.qinfeng.sportifystreamer.trackplay.TrackPlayFragment"
-        android:id="@+id/playTrackFragment"
-        />
+        android:id="@+id/playTrackFragment">
+
+    </FrameLayout>
+
+
 </RelativeLayout>
